# urban-evolution-ai

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  ETHICS.md  LICENSE  MIGRATION_GUIDE.md  NEW_STRUCTURE_SUMMARY.md  README.md  pyproject.toml
app/backend/: README.md  requirements-backend.txt
app/backend/agents/: __init__.py
app/backend/agents/tools/: __init__.py
app/backend/api/: __init__.py  main.py
app/backend/api/middleware/: __init__.py
app/backend/api/models/: __init__.py  database.py
app/backend/api/routers/: __init__.py  buildings.py  chat.py  cities.py  ethics.py  growth.py  news.py  scenarios.py
app/backend/api/utils/: __init__.py
app/backend/services/: __init__.py  gemini_flash_service.py
app/frontend/: README.md  package-lock.json  package.json
docs/: GETTING_STARTED.md  QUICK_REFERENCE.md
ml-pipeline/: README.md  requirements-ml.txt
ml-pipeline/data_collection/: README_DATA_COLLECTION.md  STRUCTURE.md  __init__.py  create_tile_grids.py  define_city_boundaries.py  export_xtnt_files.py
ml-pipeline/data_collection/qgis_frames/: copenhagen_tiles_full.xtnt  copenhagen_tiles_north_east.xtnt  copenhagen_tiles_north_west.xtnt  copenhagen_tiles_south_east.xtnt  copenhagen_tiles_south_west.xtnt  phoenix_tiles_full.xtnt  phoenix_tiles_north_center.xtnt  phoenix_tiles_north_east.xtnt  phoenix_tiles_north_west.xtnt  phoenix_tiles_south_center.xtnt  phoenix_tiles_south_east.xtnt  phoenix_tiles_south_west.xtnt  shenzhen_tiles_full.xtnt  shenzhen_tiles_north_center.xtnt  shenzhen_tiles_north_east.xtnt  shenzhen_tiles_north_west.xtnt  shenzhen_tiles_south_center.xtnt  shenzhen_tiles_south_east.xtnt  shenzhen_tiles_south_west.xtnt  tunis_tiles_full.xtnt  tunis_tiles_north_east.xtnt  tunis_tiles_north_west.xtnt  tunis_tiles_south_east.xtnt  tunis_tiles_south_west.xtnt
ml-pipeline/datasets/: DATA_ACCESS.md  city_boundaries.json
ml-pipeline/datasets/manifests/: copenhagen_tile_manifest.json  tunis_tile_manifest.json
ml-pipeline/models/detection/: __init__.py
ml-pipeline/models/growth_forecasting/: __init__.py
scripts/: migrate_now.ps1  migrate_to_new_structure.ps1  setup_all.ps1  verify_setup.ps1
shared/configs/: agent_config.yaml  model_config.yaml  policy_profiles.yaml
shared/utils/: __init__.py  logger.py
tests/: __init__.py
